2004-07-30  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: limits.c (1.3), pools.c (1.3): Fixed mistake adding
	  "default" pool to pools hashtable.  Change ns_pools set options
	  to include leading "-" just like ns_limits.

2004-07-30  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.27): Fixes nslog logging incorrect number of
	  bytes sent in access.log.

2004-07-30  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.64), nsd/driver.c (1.26), nsd/limits.c (1.2),
	  nsd/nsd.h (1.85), nsd/op.c (1.13), nsd/pools.c (1.2), nsd/queue.c
	  (1.26), nsd/return.c (1.41): Implement the "maxwait" limit.  Use
	  connPtr->responseStatus to short circuit request processing, for
	  returning HTTP 400 and 503 status responses indirectly from the
	  driver thread.

2004-07-29  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.25): Missed incrementing connPtr->roff when
	  applying Jim's changes.  Oops.

2004-07-29  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.63), nsd/Makefile (1.40), nsd/connio.c (1.15),
	  nsd/driver.c (1.24), nsd/fastpath.c (1.20), nsd/init.c (1.9),
	  nsd/limits.c (1.1), nsd/nsd.h (1.84), nsd/nsmain.c (1.56),
	  nsd/pools.c (1.1), nsd/queue.c (1.25), nsd/server.c (1.29),
	  nsd/tclcmds.c (1.40): (These changes are actually Jim Davidson's,
	  I just merged them and am checking them in on his behalf.)

	  This commit completes (yet another) rewrite of the driver thread
	  mechanism, along with implementing connection classes
	  ("ns_limits") and request processing pools ("ns_pools").

	  The code compiles, but does NOT work yet.  I will be correcting
	  the few remaining issues, soon.

2004-07-29  Dossy Shiobara <dossy@panoptic.com>

	* doc/Ns_TclInit.3 (1.7): Change version number in doc header.

2004-07-29  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c (1.40): Remove unused local variable.

2004-07-29  Dossy Shiobara <dossy@panoptic.com>

	* nsd/tcljob.c (1.26): Change mutex name to conform to naming
	  standard.
