@@ -1,3 +1,9 @@
+2004-08-05  Rob Crittenden <rcrittenden0569@aol.com>
+
+	* nsd/tclhttp.c: Add new option to ns_http wait, -servicetime, so
+	  you can capture how long the HTTP request took. Backported from
+	  aolserver_v40_bp.
+
 2004-07-30  Dossy Shiobara <dossy@panoptic.com>
 
 	* nsd/: limits.c (1.3), pools.c (1.3): Fixed mistake adding
